changed  pull request and manual dispatch

--- a/.github/workflows/code-scan.yml
+++ b/.github/workflows/code-scan.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches: [main]
   
-  pull_requests:
+  pull_request:
     branches: [main]
+
+  workflow_dispatch:
 
 jobs:
   - analyse:
