added language key word

--- a/.github/workflows/code-scan.yml
+++ b/.github/workflows/code-scan.yml
@@ -19,7 +19,8 @@ jobs:
 
     strategy:
       fail-fast: false
-      matrix: ['java']
+      matrix: 
+        language: ['java']
 
     steps:
       - name: Checkout repository
