--- a/.github/workflows/code-scan.yml
+++ b/.github/workflows/code-scan.yml
@@ -50,7 +50,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.33.1
         with:
           format: 'table'
-          scan-type: 'fs,os'
+          scan-type: 'fs'
           exit-code: '0'
           scan-ref: '.'
           vuln-type: 'os,library'
