added autobuild b/w init and analyze

--- a/.github/workflows/code-scan.yml
+++ b/.github/workflows/code-scan.yml
@@ -30,6 +30,9 @@ jobs:
         uses: github/codeql-action/init@v4
         with:
           languages: ${{ matrix.language }}
+      
+      - name: Automatic CodeQL Database Creation
+        uses: github/codeql-action/autobuild@v4
           
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
