--- a/.github/workflows/code-scan.yml
+++ b/.github/workflows/code-scan.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v4
         with:
-          sarif-file: codeql-results.sarif
+          sarif_file: codeql-results.sarif
   
   security-scanning:
     name: Security Scanning
